Thu Mar 13 17:12:21 2003  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Profile.h (TAO_SSLIOP_Profile):
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Profile.cpp (TAO_SSLIOP_Profile):

	  Corrected ObjectKey parameter in these constructors.  The
	  "TAO_ObjectKey" type has been replaced by the "TAO::ObjectKey"
	  type.

	  (parse_string):

	  Added missing ACE_CHECK.  Fixes potentially missed run-time
	  errors in emulated exception builds.

Thu Mar 13 14:13:08 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:

          Adjusted another throw spec to match the declared one,
          overlooked in

          Thu Mar 13 09:05:20 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu Mar 13 11:49:25 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any.cpp:

          Removed a duplicate explicit instantiation and added
          'template<>' before some specializations.

Thu Mar 13 10:45:05 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTCORBA/Linear_Priority_Mapping.cpp:
        * tao/RTCORBA/Thread_Pool.cpp:
        * tao/RTPortableServer/RT_POA.cpp:
        * tao/RTPortableServer/RT_Policy_Validator.cpp:

          Removed 'greater than' comparisons between a native policy value
          and RTCORBA::maxPriority. Since these quantities are both typed
          as CORBA::Short and RTCORBA::maxPriority is given the value
          32767 in RTCORBA.pidl, the comparison will always be false. This
          error started appearing because code generation was changed to
          assign constant values in the stub header file instead of in
          the stub source file as formerly, so now the compiler knows the
          value of the constant from just an include of the header file.

Thu Mar 13 10:14:42 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TAO.dsp:

          Set the template source files to be excluded from the build.
